--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -82,9 +82,7 @@ section.foto > p {
 }
 
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 
     height: 40px;
 
@@ -119,11 +117,11 @@ footer > p > a:hover {
     }
 
     footer {
-        font-size: 0.8em;
+        font-size: 0.75em;
     }
 }
 
-/*@media (min-width: 768px) and (max-width: 1050px) {
+@media (min-width: 768px) and (max-width: 1050px) {
 
     header > h1 {
         font-size: 6em;
@@ -131,6 +129,14 @@ footer > p > a:hover {
 
     section.normal > p {
         font-size: 3em;
+    }
+
+    section.foto {
+        background-color: black ;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 50% 50%;
     }
 
     section.foto > p {
