--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -15,8 +15,8 @@
     padding: 0px;
 }
 
-body {
-    display: block;
+html, body {
+    min-height: 100vh;
 }
 
 header {
@@ -43,6 +43,10 @@ header > p > strong > a {
 
 header > p > strong > a:hover {
     text-decoration: underline;
+}
+
+section {
+    padding: 10vh 0;
 }
 
 section.normal {
@@ -82,6 +86,10 @@ section.foto > p {
 }
 
 footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     text-align: center;
 
     height: 40px;
@@ -101,19 +109,19 @@ footer > p > a:hover {
     text-decoration: underline;
 }
 
-@media (min-width: 375px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) {
 
     header > h1 {
         font-size: 4em;
     }
 
     section.normal > p {
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
 
     section.foto > p {
-        font-size: 1.5em;
-        width: 285px;
+        font-size: 1.3em;
+        width: 250px;
     }
 
     footer {
