--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -64,7 +64,7 @@ section.foto {
     background-color: black ;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     background-attachment: fixed;
 }
 
